--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <link rel="stylesheet" href="style/all.min.css.css">
 <link rel="stylesheet" href="style/bootstrap.min.css">
 <link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
-<body>
+<body class="overflow-x-hidden">
 
   
   <section id="gamesSection" class="fw-lighter">
@@ -60,7 +61,7 @@
   <div class="load position-fixed w-100 h-100 m-0 d-flex justify-content-center z-3 align-items-center"><span class="loader"></span><span class="loader2"></span></div>
 
 
-<section id="detailsSection" class="position-absolute w-100 h-100 d-none">
+<section id="detailsSection" class="position-absolute animate__animated animate__fadeInRight w-100 h-100 d-none">
   <div class="container my-2">
     <div class="d-flex justify-content-between my-3"><h1>Details Game</h1> <button id="closeDetails" class="btn-close btn-close-white"></button></div>
     <div id="details" class="row g-4">
