--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </nav>
     <div class="d-flex justify-content-center flex-column">
-      <button id="openSearch" class="btn btn-outline-info m-auto mt-2">Click to open search</button>
+      <button id="openSearch" class="btn btn-outline-info">Click to open search</button>
       <input id="search" type="search" placeholder="What type of game are you looking for?" class="form-control mt-4 rounded-4 border-0 text-white m-auto">  
     </div>
     <div class="games container text-center py-4 position-relative">
