--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
       <button id="openSearch" class="btn btn-outline-info">Click to open search</button>
       <input id="search" type="search" placeholder="What type of game are you looking for?" class="form-control mt-4 rounded-4 border-0 text-white m-auto">  
     </div>
-    <div class="games container text-center py-4 position-relative">
-      <div id="demo" class="row gy-1 gx-1"></div>
-    </div>
+
+    <section class="games container text-center py-4 position-relative overflow-hidden">
+      <div id="demo" class="row gy-1 gx-1">
+      </div>
+    </section>
 
     <goUp class="rounded-5 d-flex justify-content-center align-items-center">
       <i class="fa-solid fa-arrow-up"></i>
@@ -67,7 +69,7 @@
   <div class="load position-fixed w-100 h-100 m-0 d-flex justify-content-center z-3 align-items-center"><span class="loader"></span><span class="loader2"></span></div>
 
 
-<section id="detailsSection" class="position-absolute animate__animated animate__fadeInRight w-100 h-100 d-none">
+<section id="detailsSection" class="position-absolute w-100 h-100 d-none">
   <div class="container my-2">
     <div class="d-flex justify-content-between my-3"><h1>Details Game</h1> <button id="closeDetails" class="btn-close btn-close-white"></button></div>
     <div id="details" class="row g-4">
